# context-search-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: p5-parser-abi.yml  p6-cloud-full-build.yml  p6-functional-matrix.yml
docs/: comparison-with-fast-context.md  retrieval-quality.md
roadmap/: 2026-07-08-fast-context-like-retrieval-roadmap.md
scripts/: p6_benchmark.py  profile_retrieval.py
src/context_search_tool/: chunker.py  cli.py  config.py  context_pack.py  paths.py  (+36 more)
tests/: conftest.py  generate_p4_exploration_manifest.py  generate_p5_graph_expected.py  generate_p5_graph_manifest.py  generate_retrieval_core_baseline.py  p4_exploration_identity.py  p4_real_exploration_acceptance.py  p5_graph_identity.py  p5_real_language_graphs_acceptance.py  retrieval_core_characterization.py  test_ab_comparison.py  test_acceptance_java_fixture.py  test_chunker_java_plugin.py  test_cli_commands.py  test_cli_import.py  test_config_paths.py  test_context_excerpts.py  test_context_needs.py  test_context_pack.py  test_direct_text_evidence.py  test_embeddings_bge.py  test_embeddings_vector_store.py  test_exploration_boundaries.py  test_exploration_contracts.py  test_exploration_fusion.py  test_exploration_goals.py  test_exploration_inputs.py  test_exploration_options.py  test_exploration_probes.py  test_exploration_runner.py  test_exploration_trace.py  test_formatters.py  test_frontend_graph.py  test_frontend_roles.py  test_generic_baseline_quality.py  test_graph_lifecycle.py  test_graph_models.py  test_graph_resolution.py  test_graph_store.py  test_identifier_intent.py  (+56 more)
(+262 files in other folders)
