[project]
name = "context-search-tool"
version = "0.1.0"
description = "Local hybrid semantic retrieval for codebases"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pathspec>=0.12.1",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "mcp[cli]>=1.27,<2",
  "tree-sitter==0.26.0",
  "tree-sitter-java==0.23.5",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-typescript==0.23.2",
  "defusedxml==0.7.1"
]

[project.scripts]
cst = "context_search_tool.cli:app"
cst-mcp = "context_search_tool.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services"
]
